<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Bruin SwipeSwap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- General -->
    <string name="login_button">Log in</string>
    <string name="submit_button">Submit</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="user_full_name">Joe Bruin</string>
    <string name="user_number">123-456-7890</string>
    <string name="number_offers">1</string>
    <string name="number_requests">2</string>
    <string name="action_edit">Edit</string>
    <string name="action_refresh">Refresh</string>
    <string name="email">UCLA Email</string>
    <string name="password">Password</string>
    
    <!-- Register -->
	<string name="confirm_password">Confirm Password</string>
	<string name="register">Register</string>
    
    <!-- Log In -->
    <string name="register_account"><u>Register for an account</u></string>
    <string name="login_icon_desc">Bruin SwipeSwap Logo</string>

    <!-- TODO: later have these grab previous value from database -->
    <!-- Edit User -->
    <string name="edit_user">Edit User</string>
    <string name="update_button">Update</string>
    <string name="new_name">Name</string>
    <string name="new_number">Number</string>

    <!-- Home Page -->
    <string name="offer_swipes">Offer Swipes</string>
    <string name="request_swipes">Request Swipes</string>
    <string name="no_match">No match found yet</string>
    <string name="view_match_button">View Match</string>
    <string name="current_details_1">Currently</string>
    <string name="current_details_2">user(s) offering swipes and</string>
    <string name="current_details_3">user(s) requesting swipes.</string>
    
    <!-- Offer/Request Swipe -->
    <string name="accept_button">Accept</string>
    <string name="decline_button">Decline</string>
    <string name="match_name">Match name:</string>
    <string name="match_number">Match number:</string>
    <string name="amount">Amount:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    
    <!-- Offer Swipe -->
    <string name="anytime_today">Anytime Today</string>
    
    <!-- Request Swipe -->
    <string name="request_button">Request</string>
    
    
    
</resources>
