<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_margin="10dp" >
    
   <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EditInfo_imageView"
        android:src="@drawable/ic_action_add_person"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp" />
   
    <EditText
        android:id="@+id/register_editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:hint="@string/name"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:inputType="textCapWords" >  
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/register_editText_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number"
        android:ems="20"
        android:gravity="center"
        android:inputType="number"
        android:layout_marginBottom="10dp" />
    <EditText
        android:id="@+id/register_editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:hint="@string/email"
        android:gravity="center"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/register_editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:ems="20"
        android:gravity="center"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp" />
        
   <EditText
        android:id="@+id/register_editText_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:ems="20"
        android:gravity="center"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp" />
   
    <Button
        android:id="@+id/register_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/blue_button"
        style="@style/ButtonText"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/register_cancel_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:background="@drawable/gray_button" />

</LinearLayout>