<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="152dp"
        android:layout_height="221dp"
        android:contentDescription="@string/login_icon_desc"
        android:src="@drawable/ic_launcher"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/login_editText_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:ems="20"
        android:gravity="center" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/login_editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:gravity="center" />
 
    <Button
        android:id="@+id/login_submit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
         />

    <TextView
        android:id="@+id/login_editText_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_account"
        android:gravity="center"
        android:ems="15" />
 
</LinearLayout>