<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="20dp"
    android:orientation = "vertical"
    tools:context="com.example.bruinswipeswap.Home"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <TextView
            android:id="@+id/home_current_update"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:textColor="#a3a3a3"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    
	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" 
    	android:layout_marginBottom="5dp">

        <ImageView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:src="@drawable/ic_action_person"/>

        <TextView
            android:id="@+id/name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginBottom="10dp"
    	android:orientation="horizontal" >

        <ImageView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:src="@drawable/ic_action_call"
        	android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/number_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </LinearLayout>

	<ListView android:id="@+id/home_requests_listview"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:divider="@android:color/transparent">
	</ListView>

	<ListView android:id="@+id/home_offers_listview"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:divider="@android:color/transparent">
	</ListView>

    <!--  TODO: disable button and display "No Match" if no matches -->
    <Button
        android:id="@+id/view_match_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/blue_button"
        style="@style/ButtonText"
        android:text="@string/view_match_button" />

    <Button
        android:id="@+id/offer_swipes_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/gray_button"
        android:text="@string/offer_swipes" />

    <Button
        android:id="@+id/request_swipes_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/gray_button"
        android:text="@string/request_swipes" />

</LinearLayout>